# API-Consultas-Medicas

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: ci-cd.yml
apps/consultas/: apps.py  models.py  serializers.py  views.py
apps/consultas/migrations/: 0001_initial.py
apps/core/: constantes.py  exception_handler.py  exceptions.py  logging.py  middleware.py  throttling.py  urls.py  utils.py  views.py
apps/profissionais/: admin.py  apps.py  models.py  serializers.py  views.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py
deploy/producao/: docker-compose.yml
deploy/staging/: docker-compose.yml
docs/: AWS-HARDENING.md  CLAUDE.md  CONVENCOES-CODIGO.md  QA-01-SMOKE-LACREI.md  SDD-01-SETUP-PROJETO.md  SDD-02-MODELAGEM-DE-DADOS.md  SDD-03-CRUD.md  SDD-04-SEGURANCA-AUTENTICACAO.md  SDD-05-TESTES.md  SDD-06-PIPELINE-CICD.md  SDD-07-DEPLOY-AWS.md  SDD-08-DOCUMENTACAO-API.md  SDD-09-README-ROLLBACK.md  aws-boas-praticas-deploy.md  docs-visao-geral.md
tests/: base.py
tests/consultas/: test_crud.py  test_erros.py  test_refinamentos.py
tests/contrato/: test_contrato_erros.py  test_contrato_profissionais.py
tests/fixtures/: dados_compartilhados.json
tests/integracao/: test_fluxo_profissional_consulta.py
tests/profissionais/: test_crud.py  test_erros.py
tests/regressao/: test_regressao.py
tests/seguranca/: test_autenticacao.py  test_cors_e_erros.py  test_health_check.py  test_rate_limiting.py
(+9 files in other folders)
